--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
-            <h2>Наші переваги</h2>
+            <h2 hidden>Наші переваги</h2>
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
