--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section>
-            <h2>Фільтр</h2>
+            <h2 hidden>Фільтр</h2>
      <ul>
         <li>
             <button type="button">Усі</button> 
@@ -53,7 +53,7 @@
      </ul>
         </section>
         <section>
-            <h1>Наші проекти</h1>
+            <h1 hidden>Наші проекти</h1>
             <ul>
                 <li>
                     <img src="images/img(1).jpg" alt="Веб-сайт" width="370" height="294">
