--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
-            <h2 hidden>Наші переваги</h2>
+            <h2 class="benefits-title">Наші переваги</h2>
             <ul>
                 <li>
-                    <h3>Увага до деталей</h3>
+                    <h3 class="benefits">Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальність</h3>
+                    <h3 class="benefits">Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>Планування</h3>
+                    <h3 class="benefits">Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>Сучасні технології</h3>
+                    <h3 class="benefits">Сучасні технології</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 class="work">Чим ми займаємося</h2>
             <ul>
                 <li><img src="images/box1.jpg" alt="фото1" width="370" height="294"></li>
                 <li><img src="images/box2.jpg" alt="фото2" width="370" height="294"></li>
@@ -68,23 +68,23 @@
             </ul>
         </section>
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="our-team">Наша команда</h2>
             <ul>
                 <li><img src="images/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team">Ігор Дем'яненко</h3>
+                    <p class="paragraph">Product Designer</p>
                 </li>
                 <li><img src="images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team">Ольга Рєпіна</h3>
+                    <p class="paragraph">Frontend Developer</p>
                 </li>
                 <li><img src="images/img3.jpg" alt="Микола Тарасов" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="team">Микола Тарасов</h3>
+                    <p class="paragraph">Marketing</p>
                 </li>
                 <li><img src="images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team">Михайло Єрмаков</h3>
+                    <p class="paragraph">UI Designer</p>
                 </li>
             </ul>
         </section>
