--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section>
-            <h2 hidden>Фільтр</h2>
+            <h1 class="filter">Фільтр</h1>
      <ul>
         <li>
             <button type="button">Усі</button> 
@@ -51,54 +51,53 @@
             <button type="button">Маркетинг</button>
         </li>
      </ul>
-        </section>
-        <section>
-            <h1 hidden>Наші проекти</h1>
+        
+            <h2 class="projects-title">Наші проекти</h2>
             <ul>
                 <li>
                     <img src="images/img(1).jpg" alt="Веб-сайт" width="370" height="294">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="project-name">Технокряк</h3>
+                    <p class="project-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(2).jpg" alt="Постер" width="370" height="294">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                    <p class="project-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(3).jpg" alt="Емблема" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Додаток</p>
+                    <h3 class="project-name">Ресторан Seafood</h3>
+                    <p class="project-paragraph">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(4).jpg" alt="Навушники" width="370" height="294">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="project-name">Проєкт Prime</h3>
+                    <p class="project-paragraph">Маркетинг</p>
                 </li> 
                 <li>
                     <img src="images/img(5).jpg" alt="Коробки" width="370" height="294">
-                    <h3>Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                    <h3 class="project-name">Проєкт Boxes</h3>
+                    <p class="project-paragraph">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(6).jpg" alt="Веб-сайт 2" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="project-name">Inspiration has no Borders</h3>
+                    <p class="project-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(7).jpg" alt="Видання" width="370" height="294">
-                    <h3>Видання Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <h3 class="project-name">Видання Limited Edition</h3>
+                    <p class="project-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(8).jpg" alt="Тег етикетки" width="370" height="294">
-                    <h3>Проєкт LAB</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="project-name">Проєкт LAB</h3>
+                    <p class="project-paragraph">Маркетинг</p>
                 </li>
                 <li>
                     <img src="images/img(9).jpg" alt="Зростаючий бізнес" width="370" height="294">
-                    <h3>Growing Business</h3>
-                    <p>Додаток</p>
+                    <h3 class="project-name">Growing Business</h3>
+                    <p class="project-paragraph">Додаток</p>
                 </li>
             </ul>
         </section>
