--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header>
         <nav>
             <a href="" class="webstudio"><span>Web</span>Studio</a>
-            <ul>
-                <li><a  href="">Студія</a></li>
-                <li><a  href="portfolio.html">Портфоліо</a></li>
-                <li><a  href="">Контакти</a></li>
+            <ul class="site-nav">
+                <li><a  href="index.html" class="link current">Студія</a></li>
+                <li><a  href="portfolio.html" class="link">Портфоліо</a></li>
+                <li><a  href="" class="link">Контакти</a></li>
             </ul>
         </nav>
 
@@ -34,8 +34,8 @@
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
+    <section class="caption">
+            <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
         <section>
@@ -67,7 +67,7 @@
                 <li><img src="images/box3.jpg" alt="фото3" width="370" height="294"></li>
             </ul>
         </section>
-        <section>
+        <section class="command">
             <h2 class="our-team">Наша команда</h2>
             <ul>
                 <li><img src="images/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="webstudio"><span>Web</span>Studio</a>
+        <a href="" class="webstudio"><span>Web</span><span class="studio">Studio</span></a>
         <address>
             <ul class="contacts">
                 <li>
