--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <a href="" class="webstudio"><span>Web</span>Studio</a>
-            <ul>
-                <li><a href="index.html">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
+            <ul class="site-nav">
+                <li><a href="index.html" >Студія</a></li>
+                <li><a href="" class="link current">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
@@ -32,27 +32,27 @@
         </ul>
     </header>
     <main>
-        <section>
+        <section class="section-portfolio">
             <h1 class="filter">Фільтр</h1>
-     <ul>
+     <ul class="buttons">
         <li>
-            <button type="button">Усі</button> 
+            <button type="button" class="btn">Усі</button> 
         </li>
         <li>
-            <button type="button">Веб-сайти</button>
+            <button type="button" class="btn">Веб-сайти</button>
         </li>
         <li>
-            <button type="button">Додатки</button>
+            <button type="button" class="btn">Додатки</button>
         </li>
         <li>
-            <button type="button">Дизайн</button>
+            <button type="button" class="btn">Дизайн</button>
         </li>
         <li>
-            <button type="button">Маркетинг</button>
+            <button type="button" class="btn">Маркетинг</button>
         </li>
      </ul>
         
-            <h2 class="projects-title">Наші проекти</h2>
+            
             <ul>
                 <li>
                     <img src="images/img(1).jpg" alt="Веб-сайт" width="370" height="294">
@@ -103,7 +103,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="webstudio"><span>Web</span>Studio</a>
+        <a href="" class="webstudio"><span>Web</span><span class="studio">Studio</span></a>
         <address>
             <ul class="contacts">
                 <li>
