--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="section-portfolio">
-            <h1 class="filter">Фільтр</h1>
+            <h1 style="display: none">Фільтр</h1>
      <ul class="buttons">
         <li>
             <button type="button" class="btn">Усі</button> 
