--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
-            <h2 style="display: none">Наші переваги</h2>
+            <h2 class="visually-hidden">Наші переваги</h2>
             <ul>
                 <li>
                     <h3 class="benefits">Увага до деталей</h3>
