--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
     <section class="caption">
             <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button type="button" class="buttons">Замовити послугу</button>
         </section>
         <section>
             <h2 class="visually-hidden">Наші переваги</h2>
