--- a/portfolio.html
+++ b/portfolio.html
@@ -56,47 +56,47 @@
             <ul>
                 <li>
                     <img src="images/img(1).jpg" alt="Веб-сайт" width="370" height="294">
-                    <h3 class="projects-name">Технокряк</h3>
+                    <h3 class="projects-names">Технокряк</h3>
                     <p class="project-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(2).jpg" alt="Постер" width="370" height="294">
-                    <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
+                    <h3 class="projects-names">Постер New Orlean vs Golden Star</h3>
                     <p class="project-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(3).jpg" alt="Емблема" width="370" height="294">
-                    <h3 class="projects-name">Ресторан Seafood</h3>
+                    <h3 class="projects-names">Ресторан Seafood</h3>
                     <p class="project-paragraph">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(4).jpg" alt="Навушники" width="370" height="294">
-                    <h3 class="projects-name">Проєкт Prime</h3>
+                    <h3 class="projects-names">Проєкт Prime</h3>
                     <p class="project-paragraph">Маркетинг</p>
                 </li> 
                 <li>
                     <img src="images/img(5).jpg" alt="Коробки" width="370" height="294">
-                    <h3 class="projects-name">Проєкт Boxes</h3>
+                    <h3 class="projects-names">Проєкт Boxes</h3>
                     <p class="project-paragraph">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(6).jpg" alt="Веб-сайт 2" width="370" height="294">
-                    <h3 class="projects-name">Inspiration has no Borders</h3>
+                    <h3 class="projects-names">Inspiration has no Borders</h3>
                     <p class="project-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(7).jpg" alt="Видання" width="370" height="294">
-                    <h3 class="projects-name">Видання Limited Edition</h3>
+                    <h3 class="projects-names">Видання Limited Edition</h3>
                     <p class="project-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(8).jpg" alt="Тег етикетки" width="370" height="294">
-                    <h3 class="projects-name">Проєкт LAB</h3>
+                    <h3 class="projects-names">Проєкт LAB</h3>
                     <p class="project-paragraph">Маркетинг</p>
                 </li>
                 <li>
                     <img src="images/img(9).jpg" alt="Зростаючий бізнес" width="370" height="294">
-                    <h3 class="projects-name">Growing Business</h3>
+                    <h3 class="projects-names">Growing Business</h3>
                     <p class="project-paragraph">Додаток</p>
                 </li>
             </ul>
