--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><img src="images/box3.jpg" alt="фото3" width="370" height="294"></li>
             </ul>
         </section>
-        <section class="command">
+        <section class="commands">
             <h2 class="our-team">Наша команда</h2>
             <ul>
                 <li><img src="images/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
