--- a/portfolio.html
+++ b/portfolio.html
@@ -57,47 +57,47 @@
                 <li>
                     <img src="images/img(1).jpg" alt="Веб-сайт" width="370" height="294">
                     <h3 class="projects-names">Технокряк</h3>
-                    <p class="project-paragraph">Веб-сайт</p>
+                    <p class="project-paragraphs">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(2).jpg" alt="Постер" width="370" height="294">
                     <h3 class="projects-names">Постер New Orlean vs Golden Star</h3>
-                    <p class="project-paragraph">Дизайн</p>
+                    <p class="project-paragraphs">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(3).jpg" alt="Емблема" width="370" height="294">
                     <h3 class="projects-names">Ресторан Seafood</h3>
-                    <p class="project-paragraph">Додаток</p>
+                    <p class="project-paragraphs">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(4).jpg" alt="Навушники" width="370" height="294">
                     <h3 class="projects-names">Проєкт Prime</h3>
-                    <p class="project-paragraph">Маркетинг</p>
+                    <p class="project-paragraphs">Маркетинг</p>
                 </li> 
                 <li>
                     <img src="images/img(5).jpg" alt="Коробки" width="370" height="294">
                     <h3 class="projects-names">Проєкт Boxes</h3>
-                    <p class="project-paragraph">Додаток</p>
+                    <p class="project-paragraphs">Додаток</p>
                 </li>
                 <li>
                     <img src="images/img(6).jpg" alt="Веб-сайт 2" width="370" height="294">
                     <h3 class="projects-names">Inspiration has no Borders</h3>
-                    <p class="project-paragraph">Веб-сайт</p>
+                    <p class="project-paragraphs">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="images/img(7).jpg" alt="Видання" width="370" height="294">
                     <h3 class="projects-names">Видання Limited Edition</h3>
-                    <p class="project-paragraph">Дизайн</p>
+                    <p class="project-paragraphs">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/img(8).jpg" alt="Тег етикетки" width="370" height="294">
                     <h3 class="projects-names">Проєкт LAB</h3>
-                    <p class="project-paragraph">Маркетинг</p>
+                    <p class="project-paragraphs">Маркетинг</p>
                 </li>
                 <li>
                     <img src="images/img(9).jpg" alt="Зростаючий бізнес" width="370" height="294">
                     <h3 class="projects-names">Growing Business</h3>
-                    <p class="project-paragraph">Додаток</p>
+                    <p class="project-paragraphs">Додаток</p>
                 </li>
             </ul>
         </section>
