--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="webstudio"><span>Web</span><span class="studio">Studio</span></a>
+        <a href="" class="webstudio"><span>Web</span><span class="studio-logo">Studio</span></a>
         <address>
             <ul class="contacts">
                 <li>
